project/logs/20250625_183550.log
Hello,DirectX!

clientSize:1280,720

Use Adapter:NVIDIA GeForce RTX 4060 Laptop GPU

Featurelevel : 12.2

Complete create D3D12Device!!!

Begin CompileShader, path:Object3D.VS.hlsl, profile:vs_6_0

Object3D.VS.hlsl:20:12: error: no member named 'normal' in 'VertexShaderOutput'; did you mean 'mormal'?
    output.normal = normalize(mul(input.normal, (float32_t3x3)gTransformationMatrix.World));
           ^~~~~~
           mormal
./Object3d.hlsli:4:16: note: 'mormal' declared here
    float32_t3 mormal : NORMAL0;
               ^

